# tock

./: AST.hs  AnalyseAsm.hs  CompState.hs  Errors.hs  EvalConstants.hs  EvalLiterals.hs  GenOrdAST.hs  GenTagAST.hs  GenerateC.hs  GenerateCPPCSP.hs  Indentation.hs  Intrinsics.hs  LANGUAGE  LexOccam.x  LexRain.x  Main.hs  Makefile  Makefile.am  Metadata.hs  Parse.hs  ParseOccam.hs  Pass.hs  PassTest.hs  Pattern.hs  PreprocessOccam.hs  PrettyShow.hs  ProcessTags.hs  RainParse.hs  RainParseTest.hs  RainPassTest.hs  RainPasses.hs  SimplifyExprs.hs  SimplifyProcs.hs  SimplifyTypes.hs  StructureOccam.hs  TLP.hs  TODO  TestMain.hs  TestUtil.hs  TreeUtil.hs  (+14 more)
alloy/: alloy.cabal  polyplate.cabal
alloy/Data/Generics/: Alloy.hs
alloy/Data/Generics/Alloy/: GenInstances.hs  Route.hs  Schemes.hs
backends/: AnalyseAsm.hs  AnalyseAsmTest.hs  BackendPasses.hs  BackendPassesTest.hs  GenerateC.hs  GenerateCBased.hs  GenerateCHP.hs  GenerateCPPCSP.hs  GenerateCTest.hs  TLP.hs
checks/: ArrayUsageCheck.hs  ArrayUsageCheckTest.hs  Check.hs  CheckFramework.hs  CheckTest.hs  ExSet.hs  Omega.hs  RainUsageCheck.hs  RainUsageCheckTest.hs  UsageCheck.hs  UsageCheckAlgorithms.hs  UsageCheckTest.hs  UsageCheckUtils.hs
common/: AST.hs  CommonTest.hs  CompState.hs  Errors.hs  EvalConstants.hs  EvalLiterals.hs  FlowAlgorithms.hs  FlowGraph.hs  FlowGraphTest.hs  GenericUtils.hs  Intrinsics.hs  Metadata.hs  OccamEDSL.hs  Operators.hs  Pass.hs  PassList.hs  Pattern.hs  PrettyShow.hs  Properties.hs  ShowCode.hs  TestFramework.hs  TestHarness.hs  TestUtil.hs  TestUtils.hs  TreeUtil.hs  TreeUtils.hs  Types.hs  Utils.hs
config/: CompilerCommands.hs.in  Paths.hs.in  TypeSizes.hs.in
data/: AST.hs  CompState.hs  Metadata.hs
docextra/: description  description.html  tock-docs.m4
docextra/hacking-guide/: cheat-sheet.tex  crg-group.sty  tock-intro.tex
fco/: AST.hs  ASTPasses.hs  COutput.hs  Main.hs  Makefile  Metadata.hs  OccamTypes.hs  PT.hs  PTPasses.hs  PTToAST.hs  Parse.hs  Pass.hs  PhaseIntermediate.hs  PhaseOutput.hs  PhaseSource.hs  PrettyShow.hs  SExpression.hs  Test.hs  Tree.hs  TreeToAST.hs  make-passthrough.py  soccam-2.1-spec.txt  test2.occ  test3.occ  test5.occ  test6.occ  test9.occ
fco/doc/: Makefile  PPRadam.sty  fco-pres.tex  kent.eps  the.bib  writeup.tex
fco/experiments/: UniqueNaming.hs
fco/testcases/: abbreviation.occ  allsyntax.occ  altguards.occ  ambiguous.occ  expressions.occ  graphicsplex.occ  hi.occ  slicing.occ  trivial.occ
fco2/: AST.hs  Errors.hs  EvalConstants.hs  EvalLiterals.hs  GenerateC.hs  Indentation.hs  Intrinsics.hs  LANGUAGE  Main.hs  Makefile  Metadata.hs  Parse.hs  ParseState.hs  Pass.hs  PrettyShow.hs  SYNTAX  SimplifyExprs.hs  SimplifyProcs.hs  SimplifyTypes.hs  TLP.hs  TODO  Types.hs  Unnest.hs  Utils.hs  fco_support.h  kroc-wrapper-c.c  kroc-wrapper.occ  tock_support.h
fco2/testcases/: _bad_assign.occ  _bad_assign2.occ  _bad_conversion.occ  _bad_proto2.occ  _bad_retype2.occ  _bad_retype3.occ  _bad_string_cont.occ  _bad_string_cont2.occ  _bad_tlp3.occ  _fish.occ  _unknown_proc.occ  abbrev.occ  actuals.occ  alt.occ  args.occ  array-arg.occ  array-context.occ  arrays.occ  assign.occ  ats1-q7.occ  broken3.occ  broken7.occ  broken8.occ  case.occ  checksize.occ  commstime-mini.occ  const-expr.occ  constants.occ  conversions.occ  course.occ  datatype-formals.occ  datatype.occ  empties.occ  expressions.occ  idfunc.occ  incase.occ  include.occ  include2.occ  indentation.occ  inline.occ  (+26 more)
flow/: FlowAlgorithms.hs  FlowGraph.hs  FlowGraphTest.hs  FlowUtils.hs
frontends/: LexOccam.x  LexRain.x  OccamCheckTypes.hs  OccamInferTypes.hs  OccamPasses.hs  OccamPassesTest.hs  OccamTypes.hs  OccamTypesTest.hs  ParseOccam.hs  ParseRain.hs  ParseRainTest.hs  ParseUtils.hs  PreprocessOccam.hs  PreprocessOccamTest.hs  RainPasses.hs  RainPassesTest.hs  RainTypes.hs  RainTypesTest.hs  StructureOccam.hs  StructureOccamTest.hs  TypeUnification.hs  UnifyType.hs
pass/: Pass.hs  PassList.hs  Properties.hs  Traversal.hs
polyplate/: Polyplate.hs  polyplate.cabal
polyplate/Data/Generics/: Polyplate.hs
polyplate/Data/Generics/Polyplate/: GenInstances.hs  Route.hs  Schemes.hs
pregen/: GenNavAST.hs  GenOrdAST.hs  GenTagAST.hs  PregenUtils.hs
support/: tock_intrinsics_arith.h  tock_intrinsics_float.h  tock_support.h  tock_support_cif.h  tock_support_cppcsp.h
testcases/: _assert.occ  _bad_arraysize.occ  _bad_conversion2.occ  _bad_datatype.occ  _bad_literal.occ  _bad_option.occ  _bad_proto.occ  _bad_retype4.occ  _bad_retype5.occ  _bad_retype6.occ  _bad_tlp.occ  _bad_tlp2.occ  _call_int.occ  alphabet.rain  ambiguity-output.occ  ambiguity-subscript.occ  array-constructor.occ  arrayarray.occ  arraylit.occ  assign-array.occ  assign-record.occ  assign.occ  assign.rain  ats1-q7.occ  blur.occ  booleanop.occ  capitalise.occ  case.occ  chan-retypes.occ  chanany.occ  checkindex.occ  commstime-mini.occ  commstime.rain  const-array-dim.occ  constants.occ  course.occ  datatype-const.occ  datatype2.occ  echo.occ  echoquit.rain  (+31 more)
testcases/automatic/: abbrev-check-1.occ.test  chan-ends.occ.test  direction-decorators-1.occ.test  direction-decorators-2.occ.test  direction-decorators-3.occ.test  initial-result-1.occ.test  initial-result-2.occ.test  pragma-1.occ.test  unify-types-1.rain.test  usage-check-1.occ.test  usage-check-10.occ.test  usage-check-2.occ.test  usage-check-3.occ.test  usage-check-4.occ.test  usage-check-5.occ.test  usage-check-6.occ.test  usage-check-7.occ.test  usage-check-8.occ.test  usage-check-9.occ.test
transformations/: ArrayUsageCheck.hs  ArrayUsageCheckTest.hs  ImplicitMobility.hs  Omega.hs  PassTest.hs  RainUsageCheck.hs  RainUsageCheckTest.hs  SimplifyAbbrevs.hs  SimplifyAbbrevsTest.hs  SimplifyComms.hs  SimplifyExprs.hs  SimplifyProcs.hs  SimplifyTypes.hs  SimplifyTypesTest.hs  Unnest.hs  UsageCheck.hs  UsageCheckTest.hs
