Name: Alloy
Version: 1.0.0
License: BSD3
Author: Adam Sampson and Neil Brown
Cabal-Version: >= 1.2
Build-type: Simple
Synopsis: Generic programming library
Library
  if (impl(ghc < 6.10))
    Build-Depends: base >= 3 && < 4, containers, mtl
  else
    Build-Depends: base >= 4 && < 5, containers, mtl, syb

  Exposed-modules: Data.Generics.Alloy
                   Data.Generics.Alloy.GenInstances
                   Data.Generics.Alloy.Route
                   Data.Generics.Alloy.Schemes

  Extensions: ExistentialQuantification
              FlexibleContexts
              FlexibleInstances
              FunctionalDependencies
              KindSignatures
              MultiParamTypeClasses
              Rank2Types
              ScopedTypeVariables
              TypeOperators
              UndecidableInstances

-- Rank2Types for the Route Monad stuff
-- ExistentialQuantification for DataBox
-- MultiParamTypeClasses for the Alloy type-class
-- FunctionalDependencies and UndecidableInstances for the convert-ops stuff (could go in future?)
-- TypeOperators for the opsets
-- FlexibleContexts and FlexibleInstances all over the place





